- Added google analytics

--- a/index.html
+++ b/index.html
@@ -246,14 +246,14 @@
                     <div class="col l12 xl12">
                         <h3 class="center-align">CONNECT WITH US</h3> <hr width="70%">
                     </div>
-                    <div class="col l12 xl12 center-align">
+                    <div class="col l12 xl12 center-align" style="width:100%">
                         <a href="https://www.facebook.com/DiscoverBadianCebu" target="_blank" class="center-align btn btn-large btn-flat">
                             <i class="fa fa-facebook center-align" aria-hidden="true"></i>
                         </a>
                         <a target="_blank" class="center-align btn btn-large btn-flat" href="https://www.instagram.com/discoverbadiancebu">
                             <i class="fa fa-instagram center-align" aria-hidden="true"></i>
                         </a>
-                        <a target="_blank" class="center-align btn btn-large btn-flat">
+                        <a target="_blank" href="https://twitter.com/DscvrBadianCebu" class="center-align btn btn-large btn-flat">
                             <i class="fa fa-twitter center-align" aria-hidden="true"></i>
                         </a>
                     </div>
@@ -366,5 +366,14 @@
     <script src="downloaded_components/materialize/js/materialize.min.js"></script>
     <!-- Custom JS -->
     <script src="js/simon_js.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108152614-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-108152614-1');
+    </script>
 </body>
 </html>
