--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                         </div>
                     </a>
                 </div>
+                <div class="clearfix"></div>
                 <div class="col l12 xl4">
                     <a href="#cigc_modal" data-target="cigc_modal" class="modal-trigger">
                         <div class="image-container">
